# l1x-templ-nft

./: .gitignore  Cargo.toml  devbox.json  devnet-services-dc.yml  docker-compose-cassandra-snitch.yml  process-compose.yaml
l1x-conf/: drt_node_env.sh  get_dev_address.sh  get_l1x_evm_contract_instance_address.sh  get_l1x_vm_contract_instance_address.sh  l1x-tools-intf.sh  l1x_dev_wallets.yaml
l1x-conf/scripts/: 010-01-uc-nft-deploy.json  010-02-uc-nft-init.json  010-03-uc-check-ava-balance.json  010-04-uc-check-bobby-balance.json  010-05-uc-check-emma-balance.json  010-20-uc-mint-to-emma.json
l1x-contracts/l1x-nft/src/: lib.rs
l1x-contracts/l1x_nft/: Cargo.toml
l1x-tools/: build_ebpf.sh
